# DepthEyeSdk_android

./: README.md
DepthCameraDemo/app/: CMakeLists.txt  build.gradle
DepthCameraDemo/app/debug/: output.json
DepthCameraDemo/app/libs/: make_so_to_jar.sh
DepthCameraDemo/app/src/androidTest/java/ai/pointcloud/demo/depthcamera/: ExampleInstrumentedTest.java
DepthCameraDemo/app/src/main/: AndroidManifest.xml
DepthCameraDemo/app/src/main/java/ai/pointcloud/demo/depthcamera/: FileStorageHelper.java  MainActivity.java
DepthCameraDemo/app/src/main/jni/: DepthEyeInterface.cpp  DepthEyeInterface.h  ai_pointcloud_demo_depthcamera_MainActivity.cpp  ai_pointcloud_demo_depthcamera_MainActivity.h
DepthCameraDemo/app/src/main/res/layout/: activity_main.xml
DepthCameraDemo/app/src/main/res/values/: strings.xml
DepthCameraDemo/app/src/test/java/ai/pointcloud/demo/depthcamera/: ExampleUnitTest.java
DepthCameraDemo/gradle/wrapper/: gradle-wrapper.properties
